[package]
name = "minimum_scheme"
version = "0.1.3"
authors = ["shibh308 <s17097@tokyo.kosen-ac.jp>"]
repository = "https://github.com/shibh308/minimum_scheme"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
suffix = "1.2.0"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.60"